styling fix for top stories list and removing word-wrap for team names

--- a/common/app/assets/stylesheets/module/_matches.less
+++ b/common/app/assets/stylesheets/module/_matches.less
@@ -69,7 +69,6 @@ a.competition-title {
     font-family: @sans-serif;
     overflow: hidden;
     margin-right: 36px; // offsets the FT/HT box
-    word-break: break-all; // fixes things for small screens
 }
 
 .match-team {
